[project]
name = "agpt"
version = "0.3.0"
authors = [
  { name="Torantulino", email="support@agpt.co" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "An open-source attempt to make GPT-4 autonomous"

[project.urls]
"Homepage" = "https://github.com/Significant-Gravitas/Auto-GPT"
"Bug Tracker" = "https://github.com/Significant-Gravitas/Auto-GPT"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
packages = ["autogpt"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*

'''

[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
openai = "^0.27.2"
playsound = "^1.2.2"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
readability-lxml = "^0.8.1"
requests = "^2.28.2"
tiktoken = "^0.3.3"
gTTS = "^2.3.1"
docker = "^6.0.1"
duckduckgo-search = "^2.8.6"
google-api-python-client = "^2.86.0"
pinecone-client = "^2.2.1"
redis = "^4.5.4"
orjson = "^3.8.10"
Pillow = "^9.5.0"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
jsonschema = "^4.17.3"
tweepy = "^4.13.0"
click = "^8.1.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
cognite-sdk = "^6.0.1"
spacy = "^3.5.2"
distro = "^1.8.0"

[tool.poetry.dev-dependencies]
auto-gpt-plugin-template = "^0.0.3"
pytest-integration = "^0.2.3"
coverage = "^7.2.3"
flake8 = "^6.0.0"
numpy = "^1.24.2"
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
GitPython = "^3.1.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
